Update production quality control description

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     </div>
                     <div class="advantage-number">Собственное</div>
                     <h3>Производство</h3>
-                    <p>Собственное производство — контроль качества на каждом этапе</p>
+                    <p>Контроль качества на каждом этапе и можно еще что-нибудь написать</p>
                 </div>
             </div>
         </div>
