Update quality control description in index.html

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     </div>
                     <div class="advantage-number">Собственное</div>
                     <h3>Производство</h3>
-                    <p>Контроль качества на каждом этапе и можно еще что-нибудь написать</p>
+                    <p>Работаем без посредников, поэтому лично отвечаем за качество и предлагаем честные цены без лишних наценок</p>
                 </div>
             </div>
         </div>
